parser/tests/bad/ref03-1.st
% 'character' is unsubscriptable, for substrings, use 'x[n..m]' instead
%   const compile-time string

const str := "string"
var subStr := str[1][1]
